--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "underscore": "^1.9.1"
   },
   "devDependencies": {
-    "gulp": "^4.0.0"
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "gulp": "^4.0.0",
+    "gulp-babel": "^8.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
